Algunos cambios y pestana editor

--- a/app_server/views/fixture.twig
+++ b/app_server/views/fixture.twig
@@ -24,7 +24,7 @@
   {% set index = 1 %}
   {% for partido in partidos %}
     <div class="card" id="partido-{{index}}">
-      <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+      <img class="card-img-top" src="images/Ru_ball.svg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">{{partido.local.nombre}} - {{partido.visitante.nombre}}</h5>
         <p class="card-text">{{partido.puntosLocal}} - {{partido.puntosVisitante}}</p>
