--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -48,6 +48,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/clubes" id="botonClubes">Clubes</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/editor" id="botonEditar">Editor</a>
+                </li>
             </ul>
             <button type="button" class="btn btn-primary" onclick="CambiarEstilo()" id="btnCambiarEstilo">Cambiar Estilo</button>
             &nbsp;
@@ -55,9 +58,8 @@
 
         </div>
     </nav>
-    {% block content %}
-    {% endblock %}
-
+      {% block content %}
+      {% endblock %}
     <a id="image" target="_blank" href="https://www.facebook.com/UniondeRugbydelSur/">
         <img src="images/Union-de-Rugby-del-Sur.png" alt="Logo URS" />
     </a>
