--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -55,7 +55,8 @@
             </ul>
             <button type="button" class="btn btn-primary" onclick="CambiarEstilo()" id="btnCambiarEstilo">Cambiar Estilo</button>
             &nbsp;
-            <div class="g-signin2" data-onsuccess="onSignIn" display="block"></div>
+            <!--<div class="g-signin2" data-onsuccess="onSignIn" display="block"></div>-->
+            <a href="/auth/google">Sign In with Google</a>
 
         </div>
     </nav>
