--- a/app_server/views/layout.twig
+++ b/app_server/views/layout.twig
@@ -14,6 +14,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" type="text/css" href="stylesheets/estilo-general.css">
+  {% if user.estilo %}
+  <link rel="stylesheet" type="text/css" href="stylesheets/MiEstilo2.css" id="estilo2">
+  {% else %}
+  <link rel="stylesheet" type="text/css" href="stylesheets/MiEstilo2.css" id="estilo2" disabled>
+  {% endif %}
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   <title>{{ title }}</title>
 </head>
@@ -53,23 +58,40 @@
           <a class="nav-link" href="/editor" id="botonEditar">Editor</a>
         </li>
       </ul>
-      <button type="button" class="btn btn-primary" onclick="CambiarEstilo()" id="btnCambiarEstilo">Cambiar Estilo</button>
-      &nbsp;
-      {% if user %}
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <button type="button" class="btn btn-primary" onclick="CambiarEstilo()" id="btnCambiarEstilo">Cambiar Estilo</button>
+        </li>
+        &nbsp;
+        {% if user %}
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             {{user.username}}
           </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="/auth/logout">Desconectarse</a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <div class="card" style="width:200px">
+              <img class="card-img-top" src="{{user.thumbnail}}" alt="Card image">
+              <div class="card-body">
+                <h4 class="card-title">{{user.username}}</h4>
+                <p class="card-text">Some example text.</p>
+                <!-- Coloca este código en el lugar donde quieras que se muestre la insignia. -->
+                <a href="{{user.googleplusurl}}" rel="publisher" target="_blank" style="text-decoration:none;">
+                  <img src="//ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
+                </a>
+                <a href="/auth/logout" class="btn btn-default btn-sm">
+                  <i class="fas fa-sign-out-alt"></i> Log out
+                </a>
+
+              </div>
+            </div>
           </div>
         </div>
-      {% else %}
+        {% else %}
         <a class="loginBtn loginBtn--google" href="/auth/google">
           Login with Google
         </a>
-      {% endif %}
-
+        {% endif %}
+      </ul>
     </div>
   </nav>
   {% block content %}
@@ -84,8 +106,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   <script src="/javascripts/cambioFechas.js"></script>
-
-
+  <script src="/javascripts/cambiarEstilo.js"></script>
 
 </body>
 </html>
